--- a/src/grids-r.css
+++ b/src/grids-r.css
@@ -15,33 +15,33 @@
   .responsive.columns > * {
     float: none;
     display: block;
-    width: 100% !important;
-    margin-left: 0 !important;
+    width: 100%;
+    margin-left: 0;
   }
 
 }
 
 @media (max-width: 767px) {
 
-  .responsive .fixed,
-  .responsive.fixed {
+  .responsive .fixed-width,
+  .responsive.fixed-width {
     width: 100%;
   }
 
   .responsive [class *="span"] {
-    width: 100% !important;
+    width: 100%;
   }
 
   .responsive [class *="push"] {
-    margin-left: 0 !important;
+    margin-left: 0;
   }
 
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
 
-  .responsive .fixed,
-  .responsive.fixed {
+  .responsive .fixed-width,
+  .responsive.fixed-width {
     width: 768px;
   }
 
