--- a/src/helpers.css
+++ b/src/helpers.css
@@ -16,21 +16,27 @@
 /* helpers
 -------------------------------------------------------------*/
 
-.left      { float: left !important; clear: left; }
-.right     { float: right !important; clear: right; }
+.fixed     { position: fixed; width: 100%; }
+.left      { float: left; clear: left; }
+.right     { float: right; clear: right; }
 .center    { display: block; text-align: center; }
-.centered  { float: none !important; margin-left: auto !important; margin-right: auto !important; }
+.centered  { float: none; margin-left: auto; margin-right: auto; }
 .clear     { clear: both }
-.visible   { display: inherit !important }
-.hidden    { display: none !important }
+.visible   { display: inherit }
+.hidden    { display: none }
 .invisible { visibility: hidden }
+
+
+.uppercase {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
 
 .round {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
 }
-
 
 /* clearfix
 -------------------------------------------------------------*/
