--- a/src/base.css
+++ b/src/base.css
@@ -1,6 +1,6 @@
 html,body,div,li,p,input,button,select,textarea {
   font-size: 14px;
-  line-height: 20px;
+  line-height: 1.5;
   color: #666;
 }
 
