Optimized selectors and cleanup. Removed 'help-inline' stuff.

--- a/src/extras.css
+++ b/src/extras.css
@@ -83,7 +83,7 @@
 /* tabs
 ----------------------------------------------- */
 
-ul.tabs {
+.tabs {
   border-bottom: 1px solid #b7b7b7 !important;
   padding: 0 1em;
   margin-bottom: 2em;
