--- a/src/buttons.css
+++ b/src/buttons.css
@@ -87,15 +87,25 @@
   box-shadow: none;
 }
 
-.btn-hidden {
-  display: none;
+/* sizes
+-------------------------------------------------------------*/
+
+.btn-block {
+  display: block;
 }
 
-/* Firefox: Get rid of the inner focus border */
-.btn::-moz-focus-inner{
-  padding: 0;
-  border: 0;
+.btn-small {
+  padding: .6em 2em .65em;
+  font-size: 70%;
 }
+
+.btn-large {
+  padding: .8em 5em .9em;
+  font-size: 110%;
+}
+
+/* colors
+-------------------------------------------------------------*/
 
 .btn-primary,
 .btn-selected,
@@ -105,40 +115,27 @@
   color: #fff;
 }
 
-/* BUTTON IMPROVEMENTS */
-
-.btn-block {
-  display: block;
-}
-
-.btn.btn-small {
-  padding: .6em 2em .65em;
-  font-size: 70%;
-}
-.btn.btn-large {
-  padding: .8em 5em .9em;
-  font-size: 110%;
-}
-.btn.btn-selected {
+.btn-selected {
   background-color: #345fcb;
   color: #fff;
 }
 
-.btn.btn-secondary {
+.btn-secondary {
   background: rgb(161, 195, 238);
   color: rgb(26, 88, 122);
 }
 
-.btn.btn-danger,
-.btn.btn-error {
+.btn-danger,
+.btn-error {
   background: rgb(214, 86, 75);
   color: white;
 }
-.btn.btn-success {
+
+.btn-success {
   background: rgb(64, 189, 79);
   color: white;
 }
-.btn.btn-warning {
+.btn-warning {
   background: rgb(255, 163, 0);
   color: white;
 }
