--- a/src/helpers.css
+++ b/src/helpers.css
@@ -1,18 +1,3 @@
-/* paddings
--------------------------------------------------------------*/
-
-.pad10 {
-  padding: 10px;
-}
-
-.pad15 {
-  padding: 15px;
-}
-
-.pad20 {
-  padding: 20px;
-}
-
 /* helpers
 -------------------------------------------------------------*/
 
@@ -26,7 +11,6 @@
 .hidden    { display: none }
 .invisible { visibility: hidden }
 
-
 .uppercase {
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -37,6 +21,13 @@
   -moz-border-radius: 3px;
   border-radius: 3px;
 }
+
+/* paddings
+-------------------------------------------------------------*/
+
+.pad10 { padding: 10px }
+.pad15 { padding: 15px }
+.pad20 { padding: 20px }
 
 /* clearfix
 -------------------------------------------------------------*/
