--- a/src/menus.css
+++ b/src/menus.css
@@ -17,8 +17,8 @@
 }
 
 /* Submenus should still be display: block; */
-.navbar .menu li li,
-.menu.horizontal li li {
+.navbar .dropdown li,
+.menu.horizontal .dropdown li {
   display: block;
 }
 
@@ -139,8 +139,8 @@
   background: #1b1b1b;
 }
 
-.dark .menu li a:hover,
-.dark .menu li a:focus,
+.dark .menu a:hover,
+.dark .menu a:focus,
 .dark .dropdown:hover {
   background: #222;
 }
