--- a/src/base.css
+++ b/src/base.css
@@ -1,7 +1,19 @@
-html,body,div,li,p,input,button,select,textarea {
+html {
+  font-size: 62.5%;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.5;
   color: #666;
+}
+
+input,button,select,textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
 
 p { margin: 0 0 1em }
@@ -19,7 +31,7 @@ table {
 }
 
 img {
-  width: auto\9;
+  display: inline-block;
   height: auto;
   max-width: 100%;
   vertical-align: middle;
