--- a/src/base.css
+++ b/src/base.css
@@ -1,3 +1,9 @@
+/*
+@-ms-viewport {
+  width: device-width;
+}
+*/
+
 html {
   font-size: 62.5%;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -26,8 +32,6 @@ ul {
 table {
   max-width: 100%;
   background-color: transparent;
-  border-collapse: collapse;
-  border-spacing: 0;
 }
 
 img {
