--- a/src/menus.css
+++ b/src/menus.css
@@ -23,7 +23,7 @@
 }
 
 .menu a,
-.dropdown > span {
+.menu span {
   display: block;
   color: inherit;
   text-decoration: none;
@@ -31,7 +31,7 @@
 }
 
 .menu a,
-.dropdown > span {
+.menu span {
   padding: 12px 20px;
 }
 
