--- a/src/menus.css
+++ b/src/menus.css
@@ -23,15 +23,11 @@
 }
 
 .menu a,
-.menu span {
+.dropdown > span {
   display: block;
   color: inherit;
   text-decoration: none;
   white-space: nowrap;
-}
-
-.menu a,
-.menu span {
   padding: 12px 20px;
 }
 
