Display none is important.

--- a/src/helpers.css
+++ b/src/helpers.css
@@ -8,7 +8,7 @@
 .centered  { float: none; margin-left: auto; margin-right: auto; }
 .clear     { clear: both }
 .visible   { display: inherit !important }
-.hidden    { display: none }
+.hidden    { display: none !important }
 .invisible { visibility: hidden }
 
 .uppercase {
