Make sure .columns children work as columns.

--- a/src/grids.css
+++ b/src/grids.css
@@ -15,7 +15,7 @@
 /* columns
 -------------------------------------------------------------*/
 
-.columns > div {
+.columns > * {
   display: inline-block;
   float: left;
 }
