Helpers, responsive images.

--- a/src/base.css
+++ b/src/base.css
@@ -37,10 +37,13 @@ table {
 img {
   display: inline-block;
   height: auto;
-  max-width: 100%;
   vertical-align: middle;
   border: 0;
   -ms-interpolation-mode: bicubic;
+}
+
+.responsive img {
+  max-width: 100%;
 }
 
 /* fix for google maps */
