--- a/src/helpers.css
+++ b/src/helpers.css
@@ -2,14 +2,15 @@
 -------------------------------------------------------------*/
 
 .fixed     { position: fixed; width: 100%; }
-.left      { float: left; clear: left; }
-.right     { float: right; clear: right; }
+.left      { float: left !important; clear: left; }
+.right     { float: right !important; clear: right; }
 .center    { display: block; text-align: center; }
 .centered  { float: none; margin-left: auto; margin-right: auto; }
 .clear     { clear: both }
 .visible   { display: inherit !important }
 .hidden    { display: none !important }
 .invisible { visibility: hidden }
+.block     { display: block }
 
 .uppercase {
   text-transform: uppercase;
