--- a/src/buttons.css
+++ b/src/buttons.css
@@ -18,7 +18,6 @@
   display: inline-block;
   *display: inline; /*IE 6/7*/
   zoom: 1;
-  line-height: normal;
   white-space: nowrap;
   vertical-align: baseline;
   text-align: center;
@@ -29,15 +28,13 @@
   -ms-user-select: none;
   user-select: none;
   font-weight: 600;
-  font-size: 100%;
-  *font-size: 90%; /*IE 6/7 - To reduce IE's oversized button text*/
   *overflow: visible; /*IE 6/7 - Because of IE's overly large left/right padding on buttons */
-  padding: 0.5em 1.5em 0.5em;
+  padding: 0.5em 1.5em;
   color: #444; /* rgba not supported (IE 8) */
   color: rgba(0, 0, 0, 0.80); /* rgba supported */
   *color: #444; /* IE 6 & 7 */
   border: 1px solid #999;  /*IE 6/7/8*/
-  border: none rgba(0, 0, 0, 0);  /*IE9 + everything else*/
+  border: 1px solid rgba(0, 0, 0, 0);  /*IE9 + everything else*/
   background-color: #E6E6E6;
   text-decoration: none;
   border-radius: 2px;
