--- a/src/forms.css
+++ b/src/forms.css
@@ -24,9 +24,9 @@
     padding: 0.5em 0.6em;
     display: inline-block;
     border: 1px solid #ccc;
-    font-size: 0.9em;
+/*    font-size: 0.9em; */
     box-shadow: inset 0 1px 3px #ddd;
-    border-radius: 4px;
+    border-radius: 3px;
     -webkit-transition: 0.3s linear border;
     -moz-transition: 0.3s linear border;
     -ms-transition: 0.3s linear border;
