--- a/src/buttons.css
+++ b/src/buttons.css
@@ -92,13 +92,13 @@
 }
 
 .btn-small {
-  padding: .6em 2em .65em;
+  padding: .5em 2em .5em;
   font-size: 70%;
 }
 
 .btn-large {
-  padding: .8em 5em .9em;
-  font-size: 110%;
+  padding: .6em 2.5em .6em;
+  font-size: 120%;
 }
 
 /* colors
@@ -109,12 +109,12 @@
 .btn-primary,
 .btn-selected {
   background-color: rgb(0, 120, 231);
-  color: #fff;
+  color: white;
 }
 
 .btn-selected {
   background-color: #345fcb;
-  color: #fff;
+  color: white;
 }
 
 .btn-secondary {
