--- a/src/forms.css
+++ b/src/forms.css
@@ -21,21 +21,21 @@
 .form input[type="color"],
 .form select,
 .form textarea {
-    padding: 0.5em 0.6em;
-    display: inline-block;
-    border: 1px solid #ccc;
+  padding: 0.5em 0.6em;
+  display: inline-block;
+  border: 1px solid #ccc;
 /*    font-size: 0.9em; */
-    box-shadow: inset 0 1px 3px #ddd;
-    border-radius: 3px;
-    -webkit-transition: 0.3s linear border;
-    -moz-transition: 0.3s linear border;
-    -ms-transition: 0.3s linear border;
-    -o-transition: 0.3s linear border;
-    transition: 0.3s linear border;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
+  box-shadow: inset 0 1px 3px #ddd;
+  border-radius: 3px;
+  -webkit-transition: 0.3s linear border;
+  -moz-transition: 0.3s linear border;
+  -ms-transition: 0.3s linear border;
+  -o-transition: 0.3s linear border;
+  transition: 0.3s linear border;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
 }
 
 .form input[type="text"]:focus,
@@ -54,22 +54,22 @@
 .form input[type="color"]:focus,
 .form select:focus,
 .form textarea:focus {
-    color: #333;
-    outline: 0;
-    outline: thin dotted \9; /* IE6-9 */
-    border-color: #129FEA;
+  color: #333;
+  outline: 0;
+  outline: thin dotted \9; /* IE6-9 */
+  border-color: #129FEA;
 }
 
 .form input[type="file"]:focus,
 .form input[type="radio"]:focus,
 .form input[type="checkbox"]:focus {
-    outline: thin dotted #333;
-    outline: 1px auto #129FEA;
+  outline: thin dotted #333;
+  outline: 1px auto #129FEA;
 }
 .form .checkbox,
 .form .radio {
-    margin: 0.5em 0;
-    display: block;
+  margin: 0.5em 0;
+  display: block;
 }
 
 .form input[type="text"][disabled],
@@ -91,49 +91,57 @@
 .form input[readonly],
 .form select[readonly],
 .form textarea[readonly] {
-    cursor: not-allowed;
-    background-color: #eaeded;
-    color: #cad2d3;
-    border-color: transparent;
+  cursor: not-allowed;
+  background-color: #eaeded;
+  color: #cad2d3;
+  border-color: transparent;
 }
 .form input:focus:invalid,
 .form textarea:focus:invalid,
 .form select:focus:invalid {
-    color: #b94a48;
-    border: 1px solid #ee5f5b;
+  color: #b94a48;
+  border: 1px solid #ee5f5b;
 }
 .form input:focus:invalid:focus,
 .form textarea:focus:invalid:focus,
 .form select:focus:invalid:focus {
-    border-color: #e9322d;
+  border-color: #e9322d;
 }
 .form input[type="file"]:focus:invalid:focus,
 .form input[type="radio"]:focus:invalid:focus,
 .form input[type="checkbox"]:focus:invalid:focus {
-    outline-color: #e9322d;
+  outline-color: #e9322d;
 }
 .form select {
-    border: 1px solid #ccc;
-    background-color: white;
+  border: 1px solid #ccc;
+  background-color: white;
 }
 .form select[multiple] {
-    height: auto;
+  height: auto;
+}
+
+.form label {
+  display: block;
+}
+
+.inline label {
+  display: inline;
 }
 
 .form fieldset {
-    margin: 0;
-    padding: 0.35em 0 0.75em;
-    border: 0;
+  margin: 0;
+  padding: 0.35em 0 0.75em;
+  border: 0;
 }
 
 .form legend {
-    display: block;
-    width: 100%;
-    padding: 0.3em 0;
-    margin-bottom: 0.3em;
-    font-size: 125%;
-    color: #333;
-    border-bottom: 1px solid #e5e5e5;
+  display: block;
+  width: 100%;
+  padding: 0.3em 0;
+  margin-bottom: 0.3em;
+  font-size: 125%;
+  color: #333;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .form-stacked input[type="text"],
@@ -153,7 +161,7 @@
 .form-stacked select,
 .form-stacked label,
 .form-stacked textarea {
-    display: block;
+  display: block;
 }
 
 .form-aligned input,
@@ -162,50 +170,52 @@
 /* NOTE: pure-help-inline is deprecated. Use .form-message-inline instead. */
 .form-aligned .help-inline,
 .form-message-inline {
-    display: inline-block;
-    *display: inline;
-    *zoom: 1;
-    vertical-align: middle;
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+  vertical-align: middle;
 }
 
 /* Aligned Forms */
 .form-aligned .control-group {
-    margin-bottom: 0.5em;
+  margin-bottom: 0.5em;
 }
+
 .form-aligned .control-group label {
-    text-align: right;
-    display: inline-block;
-    vertical-align: middle;
-    width: 10em;
-    margin: 0 1em 0 0;
+  text-align: right;
+  display: inline-block;
+  vertical-align: middle;
+  width: 10em;
+  margin: 0 1em 0 0;
 }
+
 .form-aligned .controls {
-    margin: 1.5em 0 0 10em;
+  margin: 1.5em 0 0 10em;
 }
 
 /* Grouped Inputs */
 .form .group fieldset {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 .form .group input {
-    display: block;
-    padding: 10px;
-    margin: 0;
-    border-radius: 0;
-    position: relative;
-    top: -1px;
+  display: block;
+  padding: 10px;
+  margin: 0;
+  border-radius: 0;
+  position: relative;
+  top: -1px;
 }
 .form .group input:focus {
-    z-index: 2;
+  z-index: 2;
 }
 .form .group input:first-child {
-    top: 1px;
-    border-radius: 4px 4px 0 0;
+  top: 1px;
+  border-radius: 4px 4px 0 0;
 }
 .form .group input:last-child {
-    top: -2px;
-    border-radius: 0 0 4px 4px;
+  top: -2px;
+  border-radius: 0 0 4px 4px;
 }
 .form .group button {
-    margin: 0.35em 0;
+  margin: 0.35em 0;
 }
