--- a/src/helpers.css
+++ b/src/helpers.css
@@ -11,6 +11,7 @@
 .hidden    { display: none !important }
 .invisible { visibility: hidden }
 .block     { display: block }
+.inline    { display: inline }
 
 .uppercase {
   text-transform: uppercase;
