Helpers are important.

--- a/src/helpers.css
+++ b/src/helpers.css
@@ -10,8 +10,8 @@
 .visible   { display: inherit !important }
 .hidden    { display: none !important }
 .invisible { visibility: hidden }
-.block     { display: block }
-.inline    { display: inline }
+.block     { display: block !important }
+.inline    { display: inline !important }
 
 .uppercase {
   text-transform: uppercase;
