Added .caret extra.

--- a/src/extras.css
+++ b/src/extras.css
@@ -2,6 +2,30 @@
  Most of this code is from http://tilomitra.github.io/cssextras/
 */
 
+/* caret
++----------------------------------------------- */
+
+.caret {
+  display: inline-block !important;
+  padding: 0 !important;
+  width: 0;
+  height: 0;
+  vertical-align: top;
+  border-top: 4px solid #000000;
+  border-right: 4px solid transparent;
+  border-left: 4px solid transparent;
+  content: "";
+}
+
+.dropdown .caret {
+  margin-top: 9px;
+  margin-left: 3px;
+}
+
+.dark .caret {
+  border-top-color: #666;
+}
+
 /* Badges/Pills */
 
 .badge,
