--- a/src/forms.css
+++ b/src/forms.css
@@ -22,7 +22,7 @@
 .form select,
 .form textarea {
   padding: 0.5em 0.6em;
-  display: inline-block;
+  display: block;
   border: 1px solid #ccc;
 /*    font-size: 0.9em; */
   box-shadow: inset 0 1px 3px #ddd;
