--- a/src/helpers.css
+++ b/src/helpers.css
@@ -27,10 +27,15 @@
 /* clearfix
 -------------------------------------------------------------*/
 
+.clearfix {
+  *zoom: 1;
+}
+
 .clearfix:before,
 .clearfix:after {
   content: " "; /* 1 */
   display: table; /* 2 */
+  line-height: 0;
 }
 
 .clearfix:after {
