--- a/src/extras.css
+++ b/src/extras.css
@@ -62,11 +62,12 @@
   background-color: #4D370C;
 }
 
-/* Alerts */
+/* alerts
+----------------------------------------------- */
+
 .alert {
   position: relative;
   padding: 10px 15px;
-  background: #ccc;
 }
 
 .alert label {
@@ -78,31 +79,52 @@
   white-space: nowrap;
 }
 
-.alert {
-  color: #c09853;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  background-color: #fcf8e3;
-  border: 1px solid #fbeed5;
+.alert,
+.alert-notice {
+  background: #ebf7fd;
+  border: 1px solid rgba(45,112,145,0.3);
 }
 
-.alert-error {
-  color: #b94a48;
-  background-color: #f2dede;
-  border-color: #eed3d7;
+.alert,
+.alert-notice,
+.alert .close-button:after,
+.alert-notice .close-button:after {
+  color: #419BC7;
 }
-
-/*
-.alert-warning {
-  background-color: rgb(250, 191, 103);
-  color: rgb(151, 96, 13);
-}
-*/
 
 .alert-success {
-  color: #468847;
-  background-color: #dff0d8;
-  border-color: #d6e9c6;
+  background: #f2fae3;
+  border-color: rgba(101,159,19,0.3);
 }
+
+.alert-success,
+.alert-success .close-button:after {
+  color: #659f13;
+}
+
+.alert-warning {
+  background: #fffceb;
+  border-color: rgba(226,131,39,0.3);
+}
+
+.alert-warning,
+.alert-warning .close-button:after {
+  color: #e28327;
+}
+
+.alert-error,
+.alert-danger {
+  background: #fff1f0;
+  border-color: rgba(216,80,48,0.3);
+}
+
+.alert-danger,
+.alert-error,
+.alert-error .close-button:after,
+.alert-danger .close-button:after {
+  color: #CA6664;
+}
+
 
 /* tabs
 ----------------------------------------------- */
