--- a/src/buttons.css
+++ b/src/buttons.css
@@ -7,17 +7,11 @@
  Button improvements from http://tilomitra.github.io/cssextras/
 */
 
-/* Firefox: Get rid of the inner focus border */
-.btn::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
 .btn {
-  /* Structure */
   display: inline-block;
   *display: inline; /*IE 6/7*/
   zoom: 1;
+  line-height: normal;
   white-space: nowrap;
   vertical-align: baseline;
   text-align: center;
@@ -27,17 +21,28 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+/* Firefox: Get rid of the inner focus border */
+.btn::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+.btn {
+  font-family: inherit;
   font-weight: 600;
+  font-size: 100%;
+  *font-size: 90%; /*IE 6/7 - To reduce IE's oversized button text*/
   *overflow: visible; /*IE 6/7 - Because of IE's overly large left/right padding on buttons */
+
   padding: 0.5em 1.5em;
-  color: #444; /* rgba not supported (IE 8) */
-  color: rgba(0, 0, 0, 0.80); /* rgba supported */
-  *color: #444; /* IE 6 & 7 */
   border: 1px solid #999;  /*IE 6/7/8*/
-  border: 1px solid rgba(0, 0, 0, 0);  /*IE9 + everything else*/
+  border: none rgba(0, 0, 0, 0);  /*IE9 + everything else*/
   background-color: #E6E6E6;
   text-decoration: none;
   border-radius: 2px;
+
   -webkit-font-smoothing: antialiased;
   /* Transitions */
   -webkit-transition: 0.1s linear -webkit-box-shadow;
@@ -54,7 +59,6 @@
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(40%, rgba(0,0,0, 0.05)), to(rgba(0,0,0, 0.10)));
   background-image: -webkit-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
   background-image: -moz-linear-gradient(top, rgba(0,0,0, 0.05) 0%, rgba(0,0,0, 0.10));
-  background-image: -ms-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
   background-image: -o-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
   background-image: linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
 }
@@ -62,6 +66,7 @@
 .btn:focus {
   outline: 0;
 }
+
 .btn-active,
 .btn:active {
   box-shadow: 0 0 0 1px rgba(0,0,0, 0.15) inset, 0 0 6px rgba(0,0,0, 0.20) inset;
@@ -104,17 +109,30 @@
 /* colors
 -------------------------------------------------------------*/
 
+.btn,
+.btn:hover {
+  color: #777;
+}
+
 .btn-primary,
-.btn-selected,
-.btn-primary,
-.btn-selected {
-  background-color: rgb(0, 120, 231);
+.btn-primary:hover,
+.btn-secondary,
+.btn-secondary:hover,
+.btn-danger,
+.btn-danger:hover,
+.btn-error,
+.btn-error:hover,
+.btn-success,
+.btn-success:hover {
   color: white;
+}
+
+.btn-primary {
+  background-color: rgb(0, 120, 231);
 }
 
 .btn-selected {
   background-color: #345fcb;
-  color: white;
 }
 
 .btn-secondary {
@@ -125,16 +143,14 @@
 .btn-danger,
 .btn-error {
   background: rgb(214, 86, 75);
-  color: white;
 }
 
 .btn-success {
   background: rgb(64, 189, 79);
-  color: white;
 }
+
 .btn-warning {
   background: rgb(255, 163, 0);
-  color: white;
 }
 
 /* close button
